deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
  labels:
    app: tasky
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
